vendor/cargo/impl-trait-for-tuples-0.2.2/tests/ui/no_type_parameter.stderr
error: Not supported by full-automatic tuple implementation. Use semi-automatic tuple implementation for more control of the implementation.
 --> $DIR/no_type_parameter.rs:3:2
  |
3 |     type Test;
  |     ^^^^^^^^^^
